Fix high contrast deprecation warning and audio loading issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -922,12 +922,4 @@ h1 {
   }
 }
 
-/* Remove deprecated -ms-high-contrast media query */
-/* Add support for both old and new standards */
-@media screen and (-ms-high-contrast: active), (forced-colors: active) {
-  /* Add your high contrast styles here */
-  .navbar-logo img,
-  .social-links img {
-    forced-color-adjust: none;
-  }
-} 
+/* Remove the deprecated media query completely */ 
